@@ -21,8 +21,6 @@
  */
 package com.dtu.common.model;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -47,12 +45,10 @@ public enum Command {
 
     Command(String displayName, Command... options) {
         this.displayName = displayName;
-        this.options = Collections.unmodifiableList(Arrays.asList(options));
+        this.options = List.of(options);
     }
 
-    public boolean isInteractive() {
-        return !options.isEmpty();
-    }
+    public boolean isInteractive() {return !options.isEmpty();}
 
     public List<Command> getOptions() {
         return options;
